--- a/index.html
+++ b/index.html
@@ -11,12 +11,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- <button onclick="sortCollectionByRarity()">Sort by Rarity</button>
-    <button id="sort-button">Sort A-Z</button>
+    <div class="stageBlock">
+        <div class="stageCont">
+            <div id="no-results" style="display: none;">No results found.</div>
+                <input type="text" id="search-input" placeholder="Search by #">
+    <!-- <button onclick="sortCollectionByRarity()">Sort by Rarity</button> -->
+        </div>
+    </div>
+
+
+<!--     
+    <button id="sort-button">Sort A-Z</button> -->
     <div id="search-container">
-        <input type="text" id="search-input" placeholder="Search by name...">
-        <button onclick="searchAndDisplayFirst()">Search</button>
-    </div> -->
+        <!-- <input type="text" id="search-input" placeholder="Search by name...">
+        <button onclick="searchAndDisplayFirst()">Search</button> -->
+    </div>
+    
     <div id="nft-grid">
            <!-- NFT items will be dynamically loaded here -->
     </div>
